<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletaAdultoFragment">

    <EditText
        android:id="@+id/txtNome"
        android:layout_width="355dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtDataNascimento"
        android:layout_width="356dp"
        android:layout_height="57dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/data_nascimento"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/txtBairro"
        android:layout_width="352dp"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="172dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtAcademia"
        android:layout_width="352dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="236dp"
        android:ems="10"
        android:hint="@string/academia"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtRecorde"
        android:layout_width="352dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="308dp"
        android:ems="10"
        android:hint="@string/recorde_segundos"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="388dp"
        android:text="@string/cadastrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="315dp"
        android:layout_height="165dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="476dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>